--- a/latexcheatsheet.tex
+++ b/latexcheatsheet.tex
@@ -300,17 +300,17 @@ $\displaystyle \prod_{n=1}^{\infty}a_n$
 \subsection{Logic}
 \begin{tabular}{lll}
 \emph{description} & \emph{command} & \emph{output}\\
-not & \verb!\neg! & $\sim$\\
+not & \verb!\sim! & $\sim$\\
 and & \verb!\land! & $\land$\\
 or & \verb!\lor! & $\lor$\\
-if...then & \verb!\implies! & $\to$\\
-if and only if & \verb!\iff! & $\leftrightarrow$\\
+if...then & \verb!\to! & $\to$\\
+if and only if & \verb!\leftrightarrow! & $\leftrightarrow$\\
 logical equivalence & \verb!\equiv! & $\equiv$\\
 therefore & \verb!\therefore! & $\therefore$\\
 there exists  & \verb!\exists! & $\exists$\\
 for all & \verb!\forall! & $\forall$\\
-%implies & \verb!\Rightarrow! & $\Rightarrow$\\
-%equivalent & \verb!\Leftrightarrow! & $\Leftrightarrow$
+implies & \verb!\Rightarrow! & $\Rightarrow$\\
+equivalent & \verb!\Leftrightarrow! & $\Leftrightarrow$
 \end{tabular}
 
 \subsection{Linear algebra}
@@ -349,8 +349,8 @@ dimension & \verb!\dim(V)! & $\dim(V)$\\
 \begin{tabular}{lll}
 \emph{description} & \emph{command} & \emph{output}\\
 divides & \verb!|! & $|$\\
-does not divide & \verb!\ndv! & $\not |$\\
-div & \verb!\dv! & $\operatorname{div}$\\
+does not divide & \verb!\not |! & $\not |$\\
+div & \verb!\operatorname{div}! & $\operatorname{div}$\\
 mod & \verb!\mod! & $\operatorname{mod}$\\
 greatest common divisor & \verb!\gcd! & $\gcd$\\
 ceiling & \verb!\lceil x \rceil! & $\lceil x\rceil$\\
@@ -407,7 +407,7 @@ Handwriting-to-\LaTeX\ sites: \href{http://detexify.kirelabs.org/}{Detexify}, \h
 Software that generates \LaTeX\ code: Mathematica, Maple, GeoGebra\\ %\href{https://prep11geogebra.pbworks.com/w/page/38586775/LaTex%20with%20GeoGebra}{Geogebra to \LaTeX\ }\\
 \LaTeX\ for the Mac: \href{http://www.tug.org/mactex/}{Mac\TeX}\\
 \LaTeX\ for the PC: \href{http://www.texniccenter.org/}{{\TeX}nicCenter} and \href{http://miktex.org/}{MiK\TeX}\\
-\LaTeX\ online:  \href{http://www.overleaf.com/}{Overleaf}, \href{http://www.sagemath.org/}{Sage}\\
+\LaTeX\ online: \href{http://www.overleaf.com/}{Overleaf}, \href{http://www.sagemath.org/}{Sage}\\
 \LaTeX\ integration with Microsoft Office, Apple iWork, etc: \href{http://www.dessci.com/en/products/mathtype/}{MathType}, \href{http://www.chachatelier.fr/latexit/}{{\LaTeX}{iT}}
 \vfill
 \hrule
