--- a/latexcheatsheet.tex
+++ b/latexcheatsheet.tex
@@ -13,6 +13,8 @@
 ]{hyperref}
 \usepackage{titlesec}
 \usepackage{tcolorbox}
+\usepackage{upquote}
+
 
 \definecolor{indigo}{RGB}{63, 81, 181}
 \colorlet{sectioncolor}{indigo!80!black}
@@ -89,7 +91,7 @@
 
 
 \begin{tcolorbox}[notebox, title=What is \LaTeX?]
-\LaTeX (usually pronounced ``LAY teck,'' sometimes ``LAH teck,'' and never ``LAY tex'') is a mathematics typesetting program that is the standard for most professional mathematics writing. It is based on the typesetting program \TeX\ created by Donald Knuth (his first version appeared in 1978). Leslie Lamport created \LaTeX, a more user-friendly version of \TeX. A team of \LaTeX\ programmers created the current version,  \LaTeX\ 2$\varepsilon$.
+\LaTeX (usually pronounced ``LAY teck,'' sometimes ``LAH teck,'' and never ``LAY tex'') is a mathematics typesetting program that is the standard for most professional mathematics writing. It is based on the typesetting program \TeX\ created by Donald Knuth (his first version appeared in 1978). Leslie Lamport created \LaTeX, a more user-friendly version of \TeX. A team of \LaTeX\ programmers created the current version,  \LaTeX~2$\varepsilon$.
 \end{tcolorbox}
 
 
@@ -304,8 +306,8 @@ function&\verb!\begin{cases}!&\\
 \verb!\varphi! & $\varphi$&\verb!\Xi! & $\Xi$\\
 \verb!\pi! & $\pi$&\verb!\aleph! & $\aleph$\\
 \verb!\psi! & $\psi$&\verb!\beth! & $\beth$\\
-\verb!\rho! & $\rho$&\verb!\daleth! & $\daleth$\\
-\verb!\sigma! & $\sigma$&\verb!\gimel! & $\gimel$
+\verb!\rho! & $\rho$&\verb!\gimel! & $\gimel$\\
+\verb!\sigma! & $\sigma$&\verb!\daleth! & $\daleth$
 \end{tabular}
 
 
