--- a/latexcheatsheet.tex
+++ b/latexcheatsheet.tex
@@ -91,7 +91,7 @@
 
 
 \begin{tcolorbox}[notebox, title=What is \LaTeX?]
-\LaTeX (usually pronounced ``LAY teck,'' sometimes ``LAH teck,'' and never ``LAY tex'') is a mathematics typesetting program that is the standard for most professional mathematics writing. It is based on the typesetting program \TeX\ created by Donald Knuth (his first version appeared in 1978). Leslie Lamport created \LaTeX, a more user-friendly version of \TeX. A team of \LaTeX\ programmers created the current version,  \LaTeX~2$\varepsilon$.
+\LaTeX (usually pronounced ``LAY teck,'' sometimes ``LAH teck,'' and never ``LAY tex'') is a mathematics typesetting program that is the standard for most professional mathematics writing. It is based on the typesetting program \TeX\ created by Donald Knuth (his first version appeared in 1978). Leslie Lamport created \LaTeX, a more user-friendly version of \TeX. A team of \LaTeX\ programmers created the current version,  \LaTeXe.
 \end{tcolorbox}
 
 
@@ -107,7 +107,7 @@ Your math can contain boldface, $\mathbf{R}$ (\verb!\mathbf{R}!), or blackboard 
 To have text appear in a math expression, use \verb!\text!. \verb!(0,1]=\{x\in\mathbb{R}:x>0\text{ and }x\le 1\}! yields $(0,1]=\{x\in\mathbb{R}:x>0\text{ and }x\le 1\}$. (Without the \verb!\text! command it treats ``and'' as three variables: $(0,1]=\{x\in\mathbb{R}:x>0 and x\le 1\}$.)
 
 \ColorSubsection{Inline Mathematical Expressions}
-Place a math expression between dollar signs (\verb!$!) to produce an inline expression.  For example, typing \verb!$90^{\circ}$! \verb!is the same as $\frac{\pi}{2}$ radians!  yields $90^{\circ}$ is the same as $\frac{\pi}{2}$ radians.
+Place a math expression between \verb!$...$! or \verb!\(...\)! to produce an inline expression.  For example, typing \verb!$90^{\circ}$! \texttt{is the same as} \verb!\(\frac{\pi}{2}\) radians! yields ``$90^{\circ}$ is the same as $\frac{\pi}{2}$ radians.''
 
 \ColorSubsection{Display Equations}
 Display equations are mathematical expressions given their own line and centered on the page. They are usually important equations that deserve to be showcased on their own line, or for tall or long equations that don't fit inline. To produce a display equation, surround the mathematical expression with \verb!\[! and \verb!\]!. Typing \verb!\[x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}\]! yields \[x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}.\]
@@ -115,8 +115,8 @@ Display equations are mathematical expressions given their own line and centered
 \ColorSubsection{Displaystyle} 
 To get full-sized inline mathematical expressions, use  \verb!\displaystyle!. Use this sparingly. Typing \verb!I want this $\displaystyle \sum_{n=1}^{\infty}! \verb!\frac{1}{n}$, not this $\sum_{n=1}^{\infty}! \verb!\frac{1}{n}$.! yields\\ I want  this $\displaystyle \sum_{n=1}^{\infty}\frac{1}{n}$, not this $\sum_{n=1}^{\infty}\frac{1}{n}.$
 
-
-
+\vfill
+~
 \columnbreak
 
 
@@ -155,7 +155,7 @@ this.
 
 \ColorSection{Comments}
 
-Use \verb!%! to create a comment. Nothing after \verb!%! will be typeset. \verb!$f(x)=\sin(x)$ %sine function! yields $f(x)=\sin(x)$
+Use \verb!%! to create a comment. Nothing on the line after \verb!%! will be typeset. \verb!$f(x)=\sin(x)$ %sine function! yields $f(x)=\sin(x)$.
 
 \ColorSection{Images}
 
@@ -181,6 +181,8 @@ To make your delimiters large enough to fit the content, use them together with 
 
 Curly braces are non-printing characters used to gather text with more than one character. Observe the differences between the four expressions \verb!x^2!, \verb!x^{2}!, \verb!x^2t!, \verb!x^{2t}! when typeset: $x^2$, $x^{2}$, $x^2t$, $x^{2t}$.
 
+\vfill
+~
 \columnbreak
 \ColorSection{Lists}
 
@@ -339,6 +341,8 @@ limit inferior & \verb!\liminf! & $\liminf$\\
 closure & \verb!\overline{A}! & $\overline{A}$
 \end{tabular}
 
+\vfill
+~
 \columnbreak
 \ColorSubsection{Calculus}
 \begin{tabular}{lll}
@@ -364,70 +368,6 @@ $\displaystyle \prod_{n=1}^{\infty}a_n$
 
 
 
-\ColorSubsection{Logic}
-\begin{tabular}{lll}
-\emph{description} & \emph{command} & \emph{output}\\
-not & \verb!\sim! & $\sim$\\
-and & \verb!\land! & $\land$\\
-or & \verb!\lor! & $\lor$\\
-if...then & \verb!\to! & $\to$\\
-if and only if & \verb!\leftrightarrow! & $\leftrightarrow$\\
-logical equivalence & \verb!\equiv! & $\equiv$\\
-therefore & \verb!\therefore! & $\therefore$\\
-there exists  & \verb!\exists! & $\exists$\\
-for all & \verb!\forall! & $\forall$\\
-implies & \verb!\Rightarrow! & $\Rightarrow$\\
-equivalent & \verb!\Leftrightarrow! & $\Leftrightarrow$
-\end{tabular}
-
-\ColorSubsection{Linear Algebra}
-\begin{tabular}{lll}
-\emph{description} & \emph{command} & \emph{output}\\
-vector & \verb!\vec{v}! & $\vec{v}$\\
-vector & \verb!\mathbf{v}! & $\mathbf{v}$\\
-norm & \verb!||\vec{v}||! & $||\vec{v}||$\\
-matrix&
-\begin{tabular}{l}
-\verb!\left[!\\
-\verb!\begin{array}{ccc}!\\
-\verb!1 & 2 & 3 \\!\\
-\verb!4 & 5 & 6\\!\\
-\verb!7 & 8 & 0!\\
-\verb!\end{array}!\\
-\verb!\right]!\end{tabular}&
-$\displaystyle \left[\begin{array}{ccc}1 & 2 & 3 \\4 & 5 & 6 \\7 & 8 & 0\end{array}\right]$\\
-\\determinant&
-\begin{tabular}{l}
-\verb!\left|!\\
-\verb!\begin{array}{ccc}!\\
-\verb!1 & 2 & 3 \\!\\
-\verb!4 & 5 & 6 \\!\\
-\verb!7 & 8 & 0!\\
-\verb!\end{array}!\\
-\verb!\right|!
-\end{tabular}&
-$\displaystyle \left|\begin{array}{ccc}1 & 2 & 3 \\4 & 5 & 6 \\7 & 8 & 0\end{array}\right|$\\
-determinant & \verb!\det(A)! & $ \det(A)$\\
-trace & \verb!\operatorname{tr}(A)! & $\operatorname{tr}(A)$\\
-dimension & \verb!\dim(V)! & $\dim(V)$\\
-\end{tabular}
-
-\columnbreak
-\ColorSubsection{Number Theory}
-\begin{tabular}{lll}
-\emph{description} & \emph{command} & \emph{output}\\
-divides & \verb!|! & $|$\\
-does not divide & \verb!\not |! & $\not |$\\
-div & \verb!\operatorname{div}! & $\operatorname{div}$\\
-mod & \verb!\mod! & $\operatorname{mod}$\\
-greatest common divisor & \verb!\gcd! & $\gcd$\\
-ceiling & \verb!\lceil x \rceil! & $\lceil x\rceil$\\
-floor & \verb!\lfloor x \rfloor! & $\lfloor x \rfloor$\\
-\end{tabular}
-
-
-
-
 \ColorSubsection{Geometry and Trigonometry}
 \begin{tabular}{lll}
 \emph{description} & \emph{command} & \emph{output}\\
@@ -445,6 +385,68 @@ inverse sine& \verb!\arcsin! & $\arcsin$\\
 inverse cosine& \verb!\arccos! & $\arccos$\\
 inverse tangent& \verb!\arctan! & $\arctan$\\
 \end{tabular}
+
+\ColorSubsection{Linear Algebra}
+\begin{tabular}{lll}
+\emph{description} & \emph{command} & \emph{output}\\
+vector & \verb!\vec{v}! & $\vec{v}$\\
+vector & \verb!\mathbf{v}! & $\mathbf{v}$\\
+norm & \verb!\|\vec{v}\|! & $||\vec{v}||$\\
+matrix&
+\begin{tabular}{l}
+  \verb!\begin{bmatrix}!\\
+    \verb!1 & 2 & 3 \\!\\
+    \verb!4 & 5 & 6\\!\\
+    \verb!7 & 8 & 0!\\
+    \verb!\end{bmatrix}!\end{tabular}&
+    \(\displaystyle \begin{bmatrix}1 & 2 & 3 \\4 & 5 & 6 \\7 & 8 & 0\end{bmatrix}\)\\
+    \\determinant&
+    \begin{tabular}{l}
+    \verb!\begin{vmatrix}!\\
+    \verb!1 & 2 & 3 \\!\\
+    \verb!4 & 5 & 6 \\!\\
+    \verb!7 & 8 & 0!\\
+    \verb!\end{vmatrix}!
+    \end{tabular}&
+    \(\displaystyle \begin{vmatrix}1 & 2 & 3 \\4 & 5 & 6 \\7 & 8 & 0\end{vmatrix}\)\\   
+determinant & \verb!\det(A)! & $ \det(A)$\\
+trace & \verb!\operatorname{tr}(A)! & $\operatorname{tr}(A)$\\
+dimension & \verb!\dim(V)! & $\dim(V)$\\
+\end{tabular}
+
+\vfill
+~
+\columnbreak
+\ColorSubsection{Number Theory}
+\begin{tabular}{lll}
+\emph{description} & \emph{command} & \emph{output}\\
+divides & \verb!|! & $|$\\
+does not divide & \verb!\not |! & $\not |$\\
+div & \verb!\operatorname{div}! & $\operatorname{div}$\\
+mod & \verb!\mod! & $\operatorname{mod}$\\
+greatest common divisor & \verb!\gcd! & $\gcd$\\
+ceiling & \verb!\lceil x \rceil! & $\lceil x\rceil$\\
+floor & \verb!\lfloor x \rfloor! & $\lfloor x \rfloor$\\
+\end{tabular}
+
+
+
+\ColorSubsection{Logic}
+\begin{tabular}{lll}
+\emph{description} & \emph{command} & \emph{output}\\
+not & \verb!\sim!, \verb!\lnot!& $\sim$, $\lnot$\\
+and & \verb!\land! & $\land$\\
+or & \verb!\lor! & $\lor$\\
+if...then & \verb!\to! & $\to$\\
+if and only if & \verb!\leftrightarrow! & $\leftrightarrow$\\
+logical equivalence & \verb!\equiv! & $\equiv$\\
+therefore & \verb!\therefore! & $\therefore$\\
+there exists  & \verb!\exists! & $\exists$\\
+for all & \verb!\forall! & $\forall$\\
+implies & \verb!\Rightarrow! & $\Rightarrow$, $\implies$\\
+equivalent & \verb!\Leftrightarrow!, \verb!\iff! & $\Leftrightarrow$, $\iff$
+\end{tabular}
+
 
 \ColorSection{Symbols in Text Mode}
 
@@ -473,10 +475,10 @@ CTAN: \url{ctan.org}\\
 Detexify: \url{detexify.kirelabs.org}\\
 Mathpix: \url{mathpix.com}\\
 %Comprehensive Symbol List: \url{ctan.org/pkg/comprehensive}\\
-The Not So Short Introduction to LaTeX2$\epsilon$:\\ \hspace*{2em}\url{ctan.org/pkg/lshort}\\
+The Not So Short Introduction to \LaTeXe:\\ \hspace*{2em}\url{ctan.org/pkg/lshort}\\
 Mac: MacTeX \url{tug.org/mactex},\\ \hspace*{2em}LaTeXiT \url{www.chachatelier.fr/latexit}\\
 Windows: TeXnicCenter \url{www.texniccenter.org},\\ \hspace*{2em}MiKTeX (\url{miktex.org})\\
-Online: Overleaf \url{www.overleaf.com},\\ \hspace*{2em}SageMath \url{www.sagemath.org}
+Online: Overleaf \url{www.overleaf.com},\\ \hspace*{2em}SageMath \url{www.sagemath.org}\\ \hspace*{2em}TeX-SX \url{tex.stackexchange.com}
 \end{tcolorbox}
 \end{multicols}
 \end{document}
